# Xerus

./: .gitmodules  CMakeLists.txt  Xerus Engine.sln
2D Hard Shadows/: 2D Hard Shadows.vcxproj  main.cpp
Collisions/: Collisions.vcxproj  main.cpp
Level Editor/: Level Editor.vcxproj  Level Editor.vcxproj.filters  LevelEditor.cpp  LevelEditor.h  main.cpp
Sandbox/: Sandbox.vcxproj  main.cpp
Tests/: Tests.vcxproj  main.cpp
Xerus Engine/: BaseGame.cpp  Buffer.cpp  Buffer.h  Camera.cpp  Camera.h  Collision.cpp  Collision.h  DrawBuffer.cpp  DrawBuffer.h  Image.cpp  Interpolation.h  Mesh.cpp  Mesh.h  OpenGL.cpp  RenderBatch.cpp  RenderBatch.h  Renderer.cpp  Renderer.h  Texture.cpp  Texture.h  Utility.cpp  VectorMath.cpp  VectorMath.h  Vertex.cpp  Window.cpp  Window.h  Xerus Engine.vcxproj  Xerus Engine.vcxproj.filters  Xerus.h  stdafx.h
Xerus Engine/picopng/: picopng.cpp
examples/: CMakeLists.txt
examples/Collisions/: CMakeLists.txt  main.cpp
examples/HardShadows/: CMakeLists.txt  main.cpp
examples/Level Editor/: CMakeLists.txt  LevelEditor.cpp  LevelEditor.h
examples/Sandbox/: CMakeLists.txt  main.cpp
include/: BaseGame.h  BitmapFont.h  Camera.h  Collision.h  Constants.h  Image.h  Mesh.h  OpenGL.h  RenderBatch.h  Renderer.h  Shader.h  Texture.h  TrueTypeFont.h  Utility.h  VectorMath.h  Vertex.h  Window.h  Xerus.h  stdafx.h
src/: BitmapFont.cpp  Camera.cpp  Collision.cpp  Image.cpp  RenderBatch.cpp  Renderer.cpp  Shader.cpp  Texture.cpp  TrueTypeFont.cpp  Utility.cpp  VectorMath.cpp  Window.cpp  Xerus.cpp
